--- a/style.css
+++ b/style.css
@@ -19,11 +19,6 @@ body {
   /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5); */
 }
 
-.text-logo {
-  color: gold;
-  font-size: 2em;
-}
-
 .cover-container {
   max-width: 42em;
 }
@@ -31,6 +26,14 @@ body {
 /*
  * Header
  */
+
+.text-logo {
+  color: gold;
+}
+
+.text-i {
+  color: coral;
+}
 
 .nav-masthead .nav-link {
   color: rgba(255, 255, 255, 0.5);
@@ -49,4 +52,14 @@ body {
 .nav-masthead .active {
   color: #fff;
   border-bottom-color: #fff;
+}
+
+.deskripsi {
+  color: gold;
+  font-weight: 500;
+}
+
+/* contact */
+.container-map {
+  background-color: #f0ecec;
 }
